# swagger.yaml
@@ -110,6 +110,63 @@ paths:
                   success:
                     type: boolean
                     example: true
+    delete:
+      tags:
+        - 🔄 General
+      summary: Get moments
+      description: >-
+        The API endpoint retrieves delete all moments images.
+      operationId: deleteImages
+      responses:
+        '200':
+          description: Delete moment Images
+          headers:
+            Access-Control-Allow-Credentials:
+              schema:
+                type: string
+                example: 'true'
+            Access-Control-Allow-Origin:
+              schema:
+                type: string
+                example: '*'
+            Connection:
+              schema:
+                type: string
+                example: keep-alive
+            Content-Length:
+              schema:
+                type: string
+                example: '1126'
+            Date:
+              schema:
+                type: string
+                example: Thu, 01 Jun 2023 05:44:27 GMT
+            ETag:
+              schema:
+                type: string
+                example: W/"466-tNv1SNtB6cuxJH2yZW7lrDnlA34"
+            Keep-Alive:
+              schema:
+                type: string
+                example: timeout=5
+            X-Powered-By:
+              schema:
+                type: string
+                example: Express
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  data:
+                    type: object
+                  message:
+                    type: string
+                    example: Moment images deleted successfully
+                  success:
+                    type: boolean
+                    example: true
+
   /moments/gallery:
     get:
       tags:
